# process-key-sender

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  license-check.yml  security-audit.yml  supply-chain.yml
example-configs/: example-advanced-config_Version3.json  example-config_Version3.json  example-sequence-config_Version3.json  example-single-key-config_Version3.json
src/: config.rs  key_sender.rs  lib.rs  main.rs  process_finder.rs
tests/: integration_test.rs
