[package]
name = "process-key-sender"
version = "0.1.0"
edition = "2021"
authors = ["KyleDerZweite"]
description = "A cross-platform tool for sending keystrokes to specific processes at configurable intervals"
license = "MIT"
repository = "https://github.com/KyleDerZweite/process-key-sender"
keywords = ["automation", "gaming", "keystrokes", "process", "cli"]
categories = ["command-line-utilities", "games"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.30"
tokio = { version = "1.0", features = ["full"] }
global-hotkey = "0.5"
ctrlc = "3.4"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "tlhelp32",
    "winnt"
] }

[target.'cfg(unix)'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xtest"] }
libc = "0.2"

[[bin]]
name = "pks"
path = "src/main.rs"