[package]
name = "process-key-sender"
version = "0.1.1"
edition = "2024"
authors = ["KyleDerZweite <kyle@process-key-sender.dev>"]
description = "Cross-platform keystroke automation tool for specific processes"
repository = "https://github.com/KyleDerZweite/process-key-sender"
license = "MIT"
keywords = ["automation", "cli", "cross-platform", "accessibility", "productivity"]
categories = ["command-line-utilities", "accessibility"]
rust-version = "1.85.0"

[[bin]]
name = "pks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "psapi"] }

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "process_key_sender"
path = "src/lib.rs"